@startuml createSubscription
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}

class SubscriptionController{
    - _repo: ISubscriptionRepositories
    + GetAll(): Task<IActionResult>
}

interface ISubscriptionRepositories<<interface>> {
    + GetAllSubscriptions(): Task<List<SubscriptionResponseDTO>> 
}

class SubscriptionRepositories {
    - _dao: SubscriptionDAO
    + GetAllSubscriptions(): Task<List<SubscriptionResponseDTO>>
}

class SubscriptionDAO {
    - _client.From<Subscriptions> : ISupabaseTable<Subscriptions>
    + GetAll(): Task<List<SubscriptionResponseDTO>>
}

class Subscriptions {
    + Id: Guid
    + Name: string
    + Price: decimal
    + Description: string
    + NumberOfMonths: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- SubscriptionController
SubscriptionController -- ISubscriptionRepositories
ISubscriptionRepositories <|-- SubscriptionRepositories
SubscriptionRepositories "1"--"1..*" SubscriptionDAO
SubscriptionDAO "1"--"0..*" Subscriptions

@enduml